feat: added patch into modular branch and minor test fixes
